Bug 1844852 - Align close button and message bar icon when moz-message-bar wraps. r=hjones
Differential Revision: https://phabricator.services.mozilla.com/D184401

--- a/toolkit/content/widgets/moz-message-bar/moz-message-bar.css
+++ b/toolkit/content/widgets/moz-message-bar/moz-message-bar.css
@@ -25,6 +25,7 @@
 
   /* Text */
   --message-bar-text-color: var(--text-color);
+  --message-bar-text-line-height: 1.5em;
 
   /* Background */
   --message-bar-background-color: var(--color-background-information);
@@ -61,13 +62,14 @@
   flex-grow: 1;
   flex-wrap: wrap;
   align-items: center;
-  gap: 12px 16px;
+  gap: 8px 16px;
   margin-inline-start: 24px;
 }
 
 .text-container {
   display: flex;
   gap: 4px 8px;
+  padding-block: calc((var(--message-bar-container-min-height) - var(--message-bar-text-line-height)) / 2);
 }
 
 .text-content {
@@ -75,13 +77,13 @@
   gap: 4px 8px;
   flex-wrap: wrap;
   word-break: break-word;
-  line-height: 1.5;
+  line-height: var(--message-bar-text-line-height);
 }
 
 /* MozMessageBar icon style */
 
 .icon-container {
-  height: 1.5em;
+  height: var(--message-bar-text-line-height);
   display: flex;
   justify-content: center;
   align-items: center;
